# cpp-game-scaffold

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
cmake/: ApplyPatches.cmake  BuildOptions.cmake  GlobCopy.cmake  Links.cmake  Nuget.cmake  PlatformInfo.cmake  System.cmake
modules/engine/: CMakeLists.txt
modules/engine/src/: engine.cpp
modules/game/: CMakeLists.txt
modules/game/src/: main.cpp
tools/: platform-info.c
